	Added sequential evaluation to the Coevolution system. Modified stats files,
		evaluators, etc.
	Modified GroupedProblemForm to require additional parameters to enable sequential
		evaluation.  Had to be done, sorry.
	Bug fixes to SimpleBreeder's handling of elites when doing sequential breeding
	Modifications to ECSuite to make its standard ranges more standard, and added
		San Marino problem 
	Major change to SimpleShortStatistics: added the "do-subpops" parameter, which is
		by default FALSE.  If it is FALSE, then only per-population statistics
		are printed (this is new).  If it is TRUE, then per-subpopulation statistics
		are printed, one per subpopulation, followed by the per-population statistics.
		It used to be that only per-subpopulation statistics were printed.  This
		enables large numbers of subpopulations (like 100) to use SimpleShortStatistics
		without generating giant files.
	Also deprecated the "gather-full" parameter and instead include "do-size" and "do-time"
		in SimpleShortStatistics.
	Also changed the columns in SimpleShortStatistics.
	Double-check that subpopulations are the right size during sequential breeding.
	Fixed error in nsga2.params which erroneously said you had to use 
		NSGA2TournamentSelection.  Thanks to Vinh Dang <vdang@our.ecu.edu.au>.
	'reevaluate-elites' parameter in SimpleBreeder incorrectly misspelled as
		'reevalate-elites', oops.
	Bug fix to SimpleBreeder.markElitesEvaluated to properly unmark more than one elite.
		Thanks to Jeroen Lappenschaar <jlappenschaar@gmail.com> and Mart Hagenaars
		<marthagenaars@gmail.com>
	Bug fix to CompetitiveMaxOnes demo, which was dividing too many times to average.
		Thanks to Joey Harrison <jharri1@gmu.edu>
	Removed a few references to gather-full in statistics demos
	Big revisions to SimpleShortStatistics and its relationships to KozaShortStatistics
	Deleted San Marino Problem
	Default run-evolve setting for ec/eval/slave.params set to false
	Removed EdgeShortStatistics